# wire

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  buildbot-nix.toml  default.nix  flake.nix  garnix.yaml  hive.nix  jobsets.nix  justfile  result  spec.json  typos.toml
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-nix/: action.yml
.github/workflows/: autofix.yml  build.yml  clean-pr-env.yml  dependabot-docs.yml  follow-nixpkgs.yml  hydra.yml  pages.yml  pr-preview.yml  publish-docs.yml  test.yml
bench/: README.md  default.nix  key.txt  run.nix  vm.nix
bench/colmena/: hive.nix
bench/wire/: hive.nix
doc/: .gitignore  README.md  book.toml  default.nix  index.md  options.nix  package.json  package.nix  pnpm-lock.yaml  upgrade.sh
doc/.vitepress/: config.ts
doc/.vitepress/theme/: index.ts
doc/guide/: apply.md  getting-started.md  hive-default.md  keys.md  magic-rollback.md  parallelism.md  tailscale.md  targeting.md  wire.md
doc/guide/caveats/: root.md
doc/guides/: apply.md  flakes.md  hive-default.md  installation.md  keys.md  migrate.md  non-root-user.md  parallelism.md  targeting.md  writing-a-hive.md
doc/guides/flakes/: nixos-rebuild.md  overview.md
doc/reference/: meta.md  module.md
doc/snippets/: default.nix
doc/snippets/getting-started/: cache.nix  configuration.nix  flake-merged.nix  flake.nix  hm.flake.nix  home.nix  nix.conf  nixos.flake.nix
doc/snippets/guides/installation/: flake.nix  hive.nix  shell.nix
doc/snippets/tutorial/: extra-experimental-features.conf  extra-experimental-features.nix
doc/src/: SUMMARY.md  deploying-a-flake.md  intro.md  terminology.md  top-level.md
doc/src/creating-a-hive/: README.md  flake.md  hive.md
doc/src/features/: magic-rollback.md  parallelism.md  secrets.md  tagging.md
doc/src/understanding-wire/: intro.md
doc/src/usage/: hive.nix.md
doc/theme/: index.hbs
doc/tutorial/: basic-hive.md  installation.md  overview.md  repo-setup.md  vm-setup.md
doc/tutorial/part-one/: basic-hive.md  installation.md  nix-setup.md  repo-setup.md  vm-setup.md
doc/tutorial/part-two/: basic-keys.md  encryption.md
intergration-testing/: default.nix  hive.nix  nixpkgs.nix
key_agent/: Cargo.toml
key_agent/src/: main.rs
lib/: Cargo.toml
lib/src/: evaluate.nix  lib.rs  modules.nix  nix.rs  nix_log.rs  test_macros.rs
lib/src/hive/: key.rs  mod.rs  node.rs
lib/src/hive/steps/: activate.rs  build.rs  evaluate.rs  mod.rs  push.rs
local-testing/: flake.nix  hive.nix  hive.nix.bak  node-a.nix  vm.nix
nix/: checks.nix  hooks.nix  shells.nix  tests.nix  utils.nix
repro/: Cargo.toml  default.nix
repro/src/: main.rs
runtime/: default.nix  evaluate.nix  makeHive.nix  module.nix  modules.nix
runtime/module/: config.nix  options.nix
tests/: tests.nix
tests/nix/: default.nix  test-opts.nix  tools.py
tests/nix/suite/: utils.nix
tests/nix/suite/test_basic_deploy/: default.nix  hive.nix
tests/nix/suite/test_keys/: default.nix  file.txt  hive.nix
tests/nix/suite/test_local_deploy/: default.nix  hive.nix
tests/nix/suite/test_remote_deploy/: default.nix  hive.nix
tests/nix/suite/test_stdin/: default.nix  hive.nix
tests/rust/: makeHive.nix
tests/rust/_keys_should_fail/: hive.nix
tests/rust/default_values_match/: hive.nix
tests/rust/flake_hive/: flake.nix
tests/rust/no_nixpkgs/: hive.nix
tests/rust/non_trivial_hive/: hive.nix
tests/rust/test_hive_dot_nix_priority/: hive.nix
tests/rust/test_hive_file/: hive.nix
wire/: Cargo.toml
wire/agent/: Cargo.toml  build.rs  default.nix
wire/agent/src/: cli.rs  lib.rs  main.rs  models.proto
wire/cli/: Cargo.toml  default.nix
wire/cli/src/: apply.rs  cli.rs  main.rs  tracing_setup.rs
wire/key_agent/: Cargo.toml  build.rs  default.nix
wire/key_agent/src/: keys.proto  lib.rs  main.rs
wire/lib/: Cargo.toml  build.rs
wire/lib/src/: errors.rs  lib.rs  nix.rs  nix_log.rs  ssh.rs  status.rs  test_macros.rs  test_support.rs
wire/lib/src/commands/: common.rs  elevated.rs  interactive.rs  interactive_logbuffer.rs  mod.rs  new.rs  nonelevated.rs  noninteractive.rs  remote.rs
wire/lib/src/commands/pty/: input.rs  logbuffer.rs  mod.rs  output.rs
wire/lib/src/hive/: key.rs  mod.rs  node.rs
wire/lib/src/hive/steps/: activate.rs  build.rs  cleanup.rs  evaluate.rs  keys.rs  mod.rs  ping.rs  push.rs
wire/src/: apply.rs  cli.rs  inspect.rs  main.rs
