[workspace]
members = ["wire/key_agent", "wire/lib", "wire/cli"]
resolver = "2"
package.edition = "2021"
package.version = "0.6.0"

[workspace.metadata.crane]
name = "wire"

[workspace.dependencies]
futures-util = { version = "0.3.31", features = ["sink", "std"] }
clap = { version = "4.5.50", features = ["derive", "string", "cargo"] }
clap-verbosity-flag = "3.0.4"
serde = { version = "1.0.228", features = ["derive", "rc"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
im = { version = "15.1.0", features = ["serde"] }
anyhow = "1.0.100"
prost = "0.14.1"
nix = { version = "0.30.1", features = ["user", "poll", "term"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
sha2 = "0.10.9"
tokio-util = { version = "0.7.16", features = ["codec"] }
base64 = "0.22.1"
nix-compat = { git = "https://git.snix.dev/snix/snix.git", features = [
  "serde",
  "flakeref",
] }
# simd-json = { version = "0.17.0", features = [
#   "serde_impl",
#   # swar-number-parsing is disabled because nix never outputs
#   # floats.
#   # "swar-number-parsing",
#   "runtime-detection",
#   "hints",
# ] }
serde_json = { version = "1.0.145" }
