[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
serde-query = "0.2.0"
thiserror = "1.0.62"
