[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
serde-query = "0.2.0"
thiserror = "1.0.62"
serde_repr = "0.1.19"
lazy_static = "1.5.0"
regex = "1.10.5"
derive_more = "0.99.18"
im = { version = "15.1.0", features = ["serde"] }
