[package]
name = "key_agent"
edition.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
nix = { workspace = true }
futures-util = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[build-dependencies]
prost-build = "0.14"
