[package]
name = "lib"
version.workspace = true
edition.workspace = true

[features]
no_web_tests = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
im = { workspace = true }
thiserror = "2.0.17"
derive_more = { version = "2.0.1", features = ["display"] }
key_agent = { path = "../key_agent" }
futures = "0.3.31"
prost = { workspace = true }
gethostname = "1.1.0"
nix.workspace = true
miette = { workspace = true }
rand = "0.9.2"
tokio-util = { workspace = true }
portable-pty = "0.9.0"
anyhow.workspace = true
itertools = "0.14.0"
enum_dispatch = "0.3.13"
sha2 = { workspace = true }
base64 = { workspace = true }
nix-compat = { workspace = true }
strip-ansi-escapes = "0.2.1"
aho-corasick = "1.1.3"
num_enum = "0.7.5"
gjson = "0.8.1"
owo-colors = { workspace = true }

[dev-dependencies]
tempdir = "0.3"

[build-dependencies]
miette = { workspace = true }
syn = "2.0.108"
proc-macro2 = "1.0.103"
itertools = "0.14.0"
